46. Backup de los proyectos seccion 5

--- a/02-basic/src/app/app.component.html
+++ b/02-basic/src/app/app.component.html
@@ -1,6 +1,6 @@
 <main class="container">
-  <app-chat></app-chat>
+
+  <router-outlet></router-outlet>
 
   <!-- Footer -->
 </main>
-<app-footer></app-footer>
