--- a/02-basic/src/app/components/chat/chat.component.scss
+++ b/02-basic/src/app/components/chat/chat.component.scss
@@ -8,6 +8,8 @@
   .chat-message {
     flex: auto;
     overflow-y: auto;
+    border: 1px solid rgba(0, 0, 0, 0.125);
+    border-radius: 0.25rem;
   }
 
   .input-message-group {
