--- a/02-basic/src/app/pages/messages/messages.component.html
+++ b/02-basic/src/app/pages/messages/messages.component.html
@@ -2,6 +2,7 @@
 
 <header>
   <h1>Usuario:&nbsp;<span>{{ wsService.getUser().name }}</span></h1>
+  <button class="btn btn-danger" (click)="logout()">Salir</button>
 </header>
 
 <hr class="w-100">
